--- a/Suma2Lealtad/Views/Parroquia/Create.cshtml
+++ b/Suma2Lealtad/Views/Parroquia/Create.cshtml
@@ -45,7 +45,7 @@
                                 <div class="col-md-12 col-btn">
                                     <div class="pull-right">
                                         <input type="submit" class="btn btn-success btn-md" value="Guardar" />
-                                        <a class="btn btn-danger btn-md" href="@Url.Action("Index", "Parrroquia")">Cancelar</a>
+                                        <a class="btn btn-danger btn-md" href="@Url.Action("FilterParroquia", "Parroquia")">Cancelar</a>
                                     </div>
                                 </div>
                             </div>
