--- a/Suma2Lealtad/Views/Urbanizacion/Index.cshtml
+++ b/Suma2Lealtad/Views/Urbanizacion/Index.cshtml
@@ -55,6 +55,7 @@
                     <div class="col-md-12 col-tabla-btn">
                         <div class="pull-right">
                             <a class="btn btn-success btn-md" href="@Url.Action("Create", "Urbanizacion")">Agregar Nuevo Registro</a>
+                            <a class="btn btn-success btn-md" href="@Url.Action("FilterUrbanizacion", "Urbanizacion")">Regresar</a>
                         </div>
                     </div>
                     <!--// buttons -->
