--- a/Suma2Lealtad/Views/Municipio/Index.cshtml
+++ b/Suma2Lealtad/Views/Municipio/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<Suma2Lealtad.Models.MUNICIPIO>
 
 @{
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -55,6 +56,7 @@
                     <div class="col-md-12 col-tabla-btn">
                         <div class="pull-right">
                             <a class="btn btn-success btn-md" href="@Url.Action("Create", "Municipio")">Agregar Nuevo Registro</a>
+                            <a class="btn btn-success btn-md" href="@Url.Action("FilterMunicipio", "Municipio")">Regresar</a>
                         </div>
                     </div>
                     <!--// buttons -->
