--- a/Suma2Lealtad/Views/Afiliado/ImpresoraImprimirTarjeta.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/ImpresoraImprimirTarjeta.cshtml
@@ -17,8 +17,17 @@
                 </div>
 
                 <div class="panel-body">
+                    @{ if (Model.type == "Suma")
+                       {
+                        @:<form action="@Url.Action("ImprimirTarjeta", "Afiliado")" name="form" method="post">
+               }
+                       else
+                       {
+                        @:<form action="@Url.Action("ImprimirTarjeta", "CompanyPrepago")" name="form" method="post">
+               }
+                    }
 
-                    <form action="@Url.Action("ImprimirTarjeta", "Afiliado")" name="form" method="post">
+                        @Html.HiddenFor(model => model.id)
 
                         <div class="form-group">
                             <div class="editor-label col-md-4 control-label">
