--- a/Suma2Lealtad/Views/Afiliado/SaldosMovimientos.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/SaldosMovimientos.cshtml
@@ -130,7 +130,15 @@
 
                     <div class="col-md-12 col-tabla-btn">
                         <div class="pull-right">
-                            <a href="@Url.Action("Index", "Afiliado", new { numdoc = Model.Afiliado.docnumber })" class="btn btn-danger btn-md">Cancelar</a>
+                            @{ if (Model.Afiliado.type == "Suma")
+                               {
+                                @:<a href="@Url.Action("Index", "Afiliado", new { numdoc = Model.Afiliado.docnumber })" class="btn btn-danger btn-md">Cancelar</a>
+               }
+                               else
+                               {
+                                @:<a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.Afiliado.companyid })" class="btn btn-danger btn-md">Cancelar</a>
+               }
+                            }
                             @*<input type="submit" class="btn btn-success btn-md" value="Regresar" style="padding-right: 15px; padding-left: 15px; margin-left: 0px;" />*@
                         </div>
                     </div>
