--- a/Suma2Lealtad/Views/CompanyPrepago/Beneficiarios.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Beneficiarios.cshtml
@@ -36,7 +36,7 @@
 
             <div class="form-group">
 
-                @Html.HiddenFor(model => model.id)
+                @Html.HiddenFor(model => model.companyid)
 
                 <div class="editor-label col-md-4 control-label">
                     Compañia :
@@ -57,6 +57,22 @@
                 </div>
                 <div class="editor-form col-md-6">
                     @Html.TextBoxFor(model => model.phone, new { @class = "form-control", @readonly = "true" })
+                </div>
+
+                <div class="editor-label col-md-4 control-label"></div>
+                <div class="editor-field col-md-6">
+                    <br />
+                </div>
+
+                <div class="col-md-12 col-tabla-btn">
+                    <div class="pull-right">
+                        <a href="@Url.Action("", "")" class="btn btn-success btn-md">Órdenes de Recarga</a>
+                        <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Individual</a>
+                        <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Masiva</a>
+                        <a href="@Url.Action("Filter", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Agregar Nuevo Beneficiario</a>
+                        <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Filtrar Beneficiarios</a>
+                        <a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-danger btn-md">Cancelar</a>
+                    </div>
                 </div>
 
             </div>
@@ -117,12 +133,12 @@
                             <td class="text-right">
                                 @{if (item.estatus == "Nueva")
                                   {
-                                    <a id="@(item.id)_approve" href="@Url.Action("Aprobar", "Afiliado", new { id = item.id })" class="btn btn-success btn-xs" >
+                                    <a id="@(item.id)_approve" href="@Url.Action("AprobarBeneficiario", "CompanyPrepago", new { id = item.id })" class="btn btn-success btn-xs" >
                                         <span class="glyphicon glyphicon-ok"></span>
                                     </a>
                                   }
                                 }
-                                <a id="@(item.id)_edit" href="@Url.Action("Edit", "Afiliado", new { id = item.id })" class="btn btn-info btn-xs" >
+                                <a id="@(item.id)_edit" href="@Url.Action("EditBeneficiario", "CompanyPrepago", new { id = item.id })" class="btn btn-info btn-xs" >
                                     <span class="glyphicon glyphicon-edit"></span>
                                 </a>
                             </td>
@@ -132,14 +148,166 @@
 
             </table>
 
-            <div class="col-md-12 col-tabla-btn">
+            <!-- SECCION PARA botones de operaciones -->
+            <div class="col-md-12 col-btn">
+                <div class="pull-left">
+                    <a id="CrearPin" class="btn btn-success btn-md" role="button">Crear Pin</a>
+                    <a id="CambiarPin" class="btn btn-success btn-md" role="button">Cambiar Pin</a>
+                    <a id="ReiniciarPin" class="btn btn-success btn-md" role="button">Reiniciar Pin</a>
+                    <a id="ImprimirTarjeta" class="btn btn-success btn-md" role="button">Imprimir Tarjeta</a>
+                    <a id="BloquearTarjeta" class="btn btn-success btn-md" role="button">Bloquear Tarjeta</a>
+                    <a id="SuspenderTarjeta" class="btn btn-success btn-md" role="button">Suspender Tarjeta</a>
+                    <a id="ReactivarTarjeta" class="btn btn-success btn-md" role="button">Reactivar Tarjeta</a>
+                    <a id="SaldosMovimientos" class="btn btn-success btn-md" role="button">Saldos y Movimientos</a>
+                    <a id="Acreditar" class="btn btn-success btn-md" role="button">Acreditar</a>
+                </div>
                 <div class="pull-right">
-                    @*<a href="@Url.Action("AgregarBeneficiario", "CompanyPrepago", new { id = Model.id })" class="btn btn-success btn-md">Agregar Nuevo Beneficiario</a>*@
-                    <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { id = Model.id })" class="btn btn-success btn-md">Filtrar Beneficiarios</a>
-                    <a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-danger btn-md">Cancelar</a>
-                    @*<input type="submit" class="btn btn-success btn-md" value="Regresar" style="padding-right: 15px; padding-left: 15px; margin-left: 0px;" />*@
+                    <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Regresar</a>
                 </div>
             </div>
+
+            <script src="~/Scripts/jquery-2.1.3.min.js"></script>
+            <script>
+                $(document).ready(function () {
+                    var rowId;
+                    var colId;
+                    var docNumber;
+                    var statusAfiliacion;
+                    var statusTarjeta;
+
+                    $("#CrearPin").hide();
+                    $("#CambiarPin").hide();
+                    $("#ReiniciarPin").hide();
+                    $("#ImprimirTarjeta").hide();
+                    $("#BloquearTarjeta").hide();
+                    $("#SuspenderTarjeta").hide();
+                    $("#ReactivarTarjeta").hide();
+                    $("#SaldosMovimientos").hide();
+                    $("#Acreditar").hide();
+                });
+
+                $('.table tbody tr td:not(:last-child)').click(function () {
+                    var filatabla = $(this).closest('tr');
+                    rowId = $(filatabla).data("row-key");
+                    statusAfiliacion = $(filatabla).data("statusafiliacion");
+                    statusTarjeta = $(filatabla).data("statustarjeta");
+                    $('.table tbody tr').removeClass("active");
+                    $(filatabla).addClass("active");
+
+                    $("#CrearPin").hide();
+                    $("#CambiarPin").hide();
+                    $("#ReiniciarPin").hide();
+                    $("#ImprimirTarjeta").hide();
+                    $("#BloquearTarjeta").hide();
+                    $("#SuspenderTarjeta").hide();
+                    $("#ReactivarTarjeta").hide();
+                    $("#SaldosMovimientos").hide();
+                    $("#Acreditar").hide();
+
+                    if (statusAfiliacion == "Nueva") {
+                    }
+                    else if (statusAfiliacion == "Activa" && statusTarjeta == "Nueva") {
+                        $("#ImprimirTarjeta").show();
+                        $("#SaldosMovimientos").show();
+                    }
+                    else if (statusAfiliacion == "Activa" && statusTarjeta == "Activa") {
+                        $("#CrearPin").show();
+                        $("#CambiarPin").show();
+                        $("#ReiniciarPin").show();
+                        $("#BloquearTarjeta").show();
+                        $("#SuspenderTarjeta").show();
+                        $("#SaldosMovimientos").show();
+                        $("#Acreditar").show();
+                    }
+                    else if (statusAfiliacion == "Activa" && statusTarjeta == "Suspendida") {
+                        $("#CrearPin").show();
+                        $("#CambiarPin").show();
+                        $("#ReiniciarPin").show();
+                        $("#BloquearTarjeta").show();
+                        $("#ReactivarTarjeta").show();
+                        $("#SaldosMovimientos").show();
+                    }
+                });
+
+                $("#CrearPin").click(function () {
+                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
+                    href = href.replace("{controller}", "Afiliado");
+                    href = href.replace("{action}", "CrearPin");
+                    href = href.replace("{params}", rowId);
+                    window.location.href = href;
+                });
+
+                $("#CambiarPin").click(function () {
+                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
+                    href = href.replace("{controller}", "Afiliado");
+                    href = href.replace("{action}", "CambiarPin");
+                    href = href.replace("{params}", rowId);
+                    window.location.href = href;
+                });
+
+                $("#ReiniciarPin").click(function () {
+                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
+                    href = href.replace("{controller}", "Afiliado");
+                    href = href.replace("{action}", "ReiniciarPin");
+                    href = href.replace("{params}", rowId);
+                    window.location.href = href;
+                });
+
+                $("#ImprimirTarjeta").click(function () {
+                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
+                    href = href.replace("{controller}", "Afiliado");
+                    href = href.replace("{action}", "ImprimirTarjeta");
+                    href = href.replace("{params}", rowId);
+                    window.location.href = href;
+                });
+
+                $("#BloquearTarjeta").click(function () {
+                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
+                    href = href.replace("{controller}", "Afiliado");
+                    href = href.replace("{action}", "BloquearTarjeta");
+                    href = href.replace("{params}", rowId);
+                    window.location.href = href;
+                });
+
+                $("#SuspenderTarjeta").click(function () {
+                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
+                    href = href.replace("{controller}", "Afiliado");
+                    href = href.replace("{action}", "SuspenderTarjeta");
+                    href = href.replace("{params}", rowId);
+                    window.location.href = href;
+                });
+
+                $("#ReactivarTarjeta").click(function () {
+                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
+                    href = href.replace("{controller}", "Afiliado");
+                    href = href.replace("{action}", "ReactivarTarjeta");
+                    href = href.replace("{params}", rowId);
+                    window.location.href = href;
+                });
+
+                $("#SaldosMovimientos").click(function () {
+                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
+                    href = href.replace("{controller}", "Afiliado");
+                    href = href.replace("{action}", "SaldosMovimientos");
+                    href = href.replace("{params}", rowId);
+                    window.location.href = href;
+                });
+
+                $("#Acreditar").click(function () {
+                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
+                    href = href.replace("{controller}", "Afiliado");
+                    href = href.replace("{action}", "Acreditar");
+                    href = href.replace("{params}", rowId);
+                    window.location.href = href;
+                });
+            </script>
+            <!-- SECCION PARA botones de operaciones -->
+
+            @*<div class="col-md-12 col-tabla-btn">
+                <div class="pull-right">
+                    <input type="submit" class="btn btn-success btn-md" value="Regresar" style="padding-right: 15px; padding-left: 15px; margin-left: 0px;" />
+                </div>
+            </div>*@
 
         </div>
         <!-- panel-body -->
