--- a/Suma2Lealtad/Views/CompanyPrepago/FilterBeneficiarios.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/FilterBeneficiarios.cshtml
@@ -28,7 +28,34 @@
 
                     <form action="@Url.Action("Beneficiarios", "CompanyPrepago")" name="FilterForm" id="FilterForm" method="post" onsubmit="return validateForm();">
 
-                        @Html.HiddenFor(model => model.id)
+                        @Html.HiddenFor(model => model.companyid)
+
+
+                        <div class="editor-label col-md-4 control-label">
+                            Compañia :
+                        </div>
+
+                        <div class="editor-field col-md-6">
+                            @Html.TextBoxFor(model => model.namecompañia, new { @class = "form-control", @readonly = "true" })
+                        </div>
+
+                        <div class="editor-label col-md-4 control-label">
+                            RIF :
+                        </div>
+                        <div class="editor-form col-md-6">
+                            @Html.TextBoxFor(model => model.rif, new { @class = "form-control", @readonly = "true" })
+                        </div>
+                        <div class="editor-label col-md-4 control-label">
+                            Teléfono :
+                        </div>
+                        <div class="editor-form col-md-6">
+                            @Html.TextBoxFor(model => model.phone, new { @class = "form-control", @readonly = "true" })
+                        </div>
+
+                        <div class="editor-label col-md-4 control-label"></div>
+                        <div class="editor-field col-md-6">
+                            <br />
+                        </div>
 
                         <div class="editor-label col-md-4 control-label">
                             Número de Documento :
@@ -99,7 +126,7 @@
             var RegExPattern2 = /^([VvEeJjGg]){1}(\d){3,10}$/;
             var RegExPattern3 = /^([Pp]){1}(-){1}([A-Za-z0-9]){3,10}$/;
             var RegExPattern4 = /^([Pp]){1}([A-Za-z0-9]){3,10}$/;
-            
+
             if (RegExPattern.test(numdoc) == false && RegExPattern2.test(numdoc) == false && RegExPattern3.test(numdoc) == false && RegExPattern4.test(numdoc) == false) {
                 spanMessage('field1', '* Formato Número de Documento Incorrecto. (V-12345678)');
                 document.getElementById('numdoc').value = "";
