--- a/Suma2Lealtad/Views/CompanyPrepago/Beneficiarios.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Beneficiarios.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Suma2Lealtad.Models.PrepagoCompanyAffiliattes
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Beneficiarios";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -67,7 +67,7 @@
                 <div class="col-md-12 col-tabla-btn">
                     <div class="pull-right">
                         <a href="@Url.Action("", "")" class="btn btn-success btn-md">Órdenes de Recarga</a>
-                        <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Individual</a>
+                        <a href="@Url.Action("RecargaIndividual", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Recarga Individual</a>
                         <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Masiva</a>
                         <a href="@Url.Action("Filter", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Agregar Nuevo Beneficiario</a>
                         <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Filtrar Beneficiarios</a>
@@ -162,7 +162,7 @@
                     <a id="Acreditar" class="btn btn-success btn-md" role="button">Acreditar</a>
                 </div>
                 <div class="pull-right">
-                    <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Regresar</a>
+                    <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-danger btn-md">Regresar</a>
                 </div>
             </div>
 
