Commit Recarga Masiva

--- a/Suma2Lealtad/Views/CompanyPrepago/Beneficiarios.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Beneficiarios.cshtml
@@ -68,7 +68,7 @@
                     <div class="pull-right">
                         <a href="@Url.Action("", "")" class="btn btn-success btn-md">Órdenes de Recarga</a>
                         <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Individual</a>
-                        <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Masiva</a>
+                        <a href="@Url.Action("RecargaMasiva", "CompanyPrepago")" class="btn btn-success btn-md">Recarga Masiva</a>
                         <a href="@Url.Action("Filter", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Agregar Nuevo Beneficiario</a>
                         <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Filtrar Beneficiarios</a>
                         <a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-danger btn-md">Cancelar</a>
