--- a/Suma2Lealtad/Views/CompanyPrepago/RecargaIndividual.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/RecargaIndividual.cshtml
@@ -1,4 +1,4 @@
-﻿@model Suma2Lealtad.Models.PrepagoCompanyAffiliattes
+﻿@model IList<Suma2Lealtad.Models.CompanyAfiliadoRecarga>
 
 @{
     ViewBag.Title = "RecargaIndividual";
@@ -34,88 +34,94 @@
 
         <div class="panel-body">
 
-            <form id="commentForm" method="post" action="@Url.Action("RecargaIndividual", "CompanyPrepago")" class="form-horizontal" onsubmit="return ValidarMontos();">
+            @*@Html.HiddenFor(model => model.)*@
 
-                <div class="form-group">
+            <div class="editor-label col-md-4 control-label">
+                Compañia :
+            </div>
 
-                    @Html.HiddenFor(model => model.companyid)
+            <div class="editor-field col-md-6">
+                @Html.TextBox("1", Model.FirstOrDefault().namecompañia, new { @class = "form-control", @readonly = "true" })
+            </div>
 
-                    <div class="editor-label col-md-4 control-label">
-                        Compañia :
-                    </div>
+            <div class="editor-label col-md-4 control-label">
+                RIF :
+            </div>
 
-                    <div class="editor-field col-md-6">
-                        @Html.TextBoxFor(model => model.namecompañia, new { @class = "form-control", @readonly = "true" })
-                    </div>
+            <div class="editor-form col-md-6">
+                @Html.TextBox("2", Model.FirstOrDefault().rif, new { @class = "form-control", @readonly = "true" })
+            </div>
 
-                    <div class="editor-label col-md-4 control-label">
-                        RIF :
-                    </div>
-                    <div class="editor-form col-md-6">
-                        @Html.TextBoxFor(model => model.rif, new { @class = "form-control", @readonly = "true" })
-                    </div>
-                    <div class="editor-label col-md-4 control-label">
-                        Teléfono :
-                    </div>
-                    <div class="editor-form col-md-6">
-                        @Html.TextBoxFor(model => model.phone, new { @class = "form-control", @readonly = "true" })
-                    </div>
+            <div class="editor-label col-md-4 control-label">
+                Teléfono :
+            </div>
 
-                    <div class="editor-label col-md-4 control-label"></div>
-                    <div class="editor-field col-md-6">
-                        <br />
-                    </div>
+            <div class="editor-form col-md-6">
+                @Html.TextBoxFor(model => model.FirstOrDefault().phone, new { @class = "form-control", @readonly = "true" })
+            </div>
 
-                    <div class="col-md-12 col-tabla-btn">
-                        <div class="pull-right">
-                            @*<a href="@Url.Action("", "")" class="btn btn-success btn-md">Órdenes de Recarga</a>
+            <div class="editor-label col-md-4 control-label"></div>
+            <div class="editor-field col-md-6">
+                <br />
+            </div>
+
+            <div class="col-md-12 col-tabla-btn">
+                <div class="pull-right">
+                    @*<a href="@Url.Action("", "")" class="btn btn-success btn-md">Órdenes de Recarga</a>
                         <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Individual</a>
                         <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Masiva</a>
                         <a href="@Url.Action("Filter", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Agregar Nuevo Beneficiario</a>*@
-                            <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Filtrar Beneficiarios</a>
-                            <a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-danger btn-md">Cancelar</a>
-                        </div>
-                    </div>
+                    <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.FirstOrDefault().companyid })" class="btn btn-success btn-md">Filtrar Beneficiarios</a>
+                    <a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-danger btn-md">Cancelar</a>
+                </div>
+            </div>
 
+            <div class="editor-field col-md-6">
+                <br />
+            </div>
 
-                    <div class="editor-field col-md-6">
-                        <br />
-                    </div>
+            <form id="commentForm" method="post" action="@Url.Action("RecargaIndividual", "CompanyPrepago")" class="form-horizontal" onsubmit="return verificarforma();">
 
-                    @*<table class="table table-striped custab">*@
-                    <table id="beneficiarios" class="table table-hover">
+                @*<table class="table table-striped custab">*@
+                <table id="beneficiarios" class="table table-hover">
 
-                        <thead>
-                            <tr>
-                                <th>Tipo</th>
-                                <th>Número de Documento</th>
-                                <th>Nombre</th>
-                                @*<th>Correo</th>
+                    <thead>
+                        <tr>
+                            <th>Tipo</th>
+                            <th>Número de Documento</th>
+                            <th>Nombre</th>
+                            @*<th>Correo</th>
                         <th>Estatus de Afiliación</th>
                         <th>Número de Tarjeta</th>
                         <th>Estatus de Tarjeta</th>*@
-                                <th>Monto</th>
-                            </tr>
-                        </thead>
+                            <th>Monto</th>
+                        </tr>
+                    </thead>
 
-                        <tbody>
+                    <tbody>
 
-                            @foreach (var item in Model.Beneficiarios)
-                            {                            
-                                <tr data-row-key="@item.id" data-statusafiliacion="@item.estatus" data-statustarjeta="@item.estatustarjeta">
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.type)
-                                    </td>
+                        @*@foreach (var item in Model)
+                        {    *@
+                        @for (int i = 0; i < Model.Count; i++)
+                        {     
+                            <tr data-row-key="@Model[i].Afiliadoid">
+                                
+                                @Html.HiddenFor(modelItem => Model[i].companyid)
+                                @Html.HiddenFor(modelItem => Model[i].Afiliadoid)
+                                
+                                <td>
+                                    @Html.DisplayFor(modelItem => Model[i].type, new { @class = "form-control" })
+                                </td>
 
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.docnumber)
-                                    </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => Model[i].docnumber, new { @class = "form-control" })
+                                </td>
 
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.name) @Html.DisplayFor(modelItem => item.lastname1)
-                                    </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => Model[i].name) @Html.DisplayFor(modelItem => Model[i].lastname1)
+                                </td>
 
-                                    @*<td>
+                                @*<td>
                                 @Html.DisplayFor(modelItem => item.email)
                             </td>
 
@@ -131,8 +137,8 @@
                                 @Html.DisplayFor(modelItem => item.estatustarjeta)
                             </td>*@
 
-                                    <td class="text-right">
-                                        @* @{if (item.estatus == "Nueva")
+                                <td class="text-right">
+                                    @* @{if (item.estatus == "Nueva")
                                   {
                                     <a id="@(item.id)_approve" href="@Url.Action("AprobarBeneficiario", "CompanyPrepago", new { id = item.id })" class="btn btn-success btn-xs" >
                                         <span class="glyphicon glyphicon-ok"></span>
@@ -142,78 +148,128 @@
                                 <a id="@(item.id)_edit" href="@Url.Action("EditBeneficiario", "CompanyPrepago", new { id = item.id })" class="btn btn-info btn-xs" >
                                     <span class="glyphicon glyphicon-edit"></span>
                                 </a>*@
-                                        <input type="text" id="Monto_@item.id" name="Monto" value="" maxlength="10" placeholder="Indique el monto" class="form-control Monto">
-                                        <span id="field_@item.id"></span>
-                                    </td>
-                                </tr>                 
-                            }
-                        </tbody>
+                                    @*<input type="text" id="Monto_@item.Afiliadoid" name="Monto" value="" maxlength="10" placeholder="Indique el monto" class="form-control Monto">*@
+                                    @Html.TextBoxFor(modelItem => Model[i].MontoRecarga, new { @class = "form-control Monto" })
+                                    <span id="field_@Model[i].Afiliadoid"></span>
+                                </td>
+                            </tr>                 
+                        }
+                    </tbody>
 
-                    </table>
+                </table>
+
+                <div class="editor-label col-md-6 control-label">
+                    Total Recargas :
+                </div>
+
+                <div class="editor-field col-md-4">
+                    @*@Html.TextBox("TotalRecargas", "", new { @class = "form-control", @readonly = "true" })*@
+                    <input type="text" id="TotalRecargas" name="TotalRecargas" value="" maxlength="10" class="form-control" readonly="true">
+                </div>
+
+                <div class="editor-label col-md-6 control-label">
+                    Monto Total Recargas :
+                </div>
+
+                <div class="editor-field col-md-4">
+                    @*@Html.TextBox("MontoTotalRecargas", "", new { @class = "form-control", @readonly = "true"})*@
+                    <input type="text" id="MontoTotalRecargas" name="MontoTotalRecargas" value="" maxlength="10" class="form-control" readonly="true">
+                </div>
+
+                <div class="editor-field col-md-6">
+                    <br />
+                </div>
+
+                <!-- SECCION PARA botones de operaciones -->
+                <div class="col-md-12 col-tabla-btn">
+                    <div class="pull-right">
+                        <input type="submit" class="btn btn-success btn-md" value="Procesar" />
+                        <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.FirstOrDefault().companyid })" class="btn btn-danger btn-md">Regresar</a>
+                    </div>
+                </div>
 
             </form>
 
-        
-
-        <!-- SECCION PARA botones de operaciones -->
-        <div class="col-md-12 col-tabla-btn">
-            <div class="pull-right">
-                <input type="submit" class="btn btn-success btn-md" value="Procesar" />
-                <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-danger btn-md">Regresar</a>
-            </div>
         </div>
+        <!-- SECCION PARA botones de operaciones -->
 
     </div>
-
-    <script src="~/Scripts/jquery-2.1.3.min.js"></script>
-    <script>
-        function ValidarMontos() {
-            $("#beneficiarios tbody tr").each(function (index) {
-                var RegExPattern = /^(\d){3,10}$/;
-                var idrow = $(this).data("row-key");
-                var campo1, campo2, campo3, campo4;
-                $(this).children("td").each(function (index2) {
-                    switch (index2) {
-                        case 0: campo1 = $(this).text();
-                            break;
-                        case 1: campo2 = $(this).text();
-                            break;
-                        case 2: campo3 = $(this).text();
-                            break;
-                        case 3: campo4 = $(this).find('.Monto').val();
-                            break;
-                    }
-                })
-                if (campo4 == "") {
-                    alert('id ' + idrow + ' no incluye recarga');
-                }
-                else if (RegExPattern.test(campo4) == false) {
-                    alert('Monto invalido (' + campo4 + ')');
-                }
-                else if (campo4 > 500) {
-                    alert('El monto excede los valores permitidos (500)');
-                }
-                else {
-                    alert('id ' + idrow + ' monto recarga: ' + campo4);
-                }
-
-            })
-            return false;
-        }
-    </script>
-    <!-- SECCION PARA botones de operaciones -->
-
-    @*<div class="col-md-12 col-tabla-btn">
-                <div class="pull-right">
-                    <input type="submit" class="btn btn-success btn-md" value="Regresar" style="padding-right: 15px; padding-left: 15px; margin-left: 0px;" />
-                </div>
-            </div>*@
-
-</div>
-<!-- panel-body -->
+    <!-- panel-body -->
 
 </div>
 <!-- panel -->
 
-</div>
+<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+<script>
+    var Myinterval = setInterval(function () {
+        ValidarMontos()
+    }, 500);
+
+    function ValidarMontos() {
+        var TotalRecargas = 0;
+        var MontoTotalRecargas = 0;
+        var resultado = true;
+
+        $("#beneficiarios tbody tr").each(function (index) {
+            var RegExPattern = /^(\d){2,10}$/;
+            var idrow = $(this).data("row-key");
+            var campo1, campo2, campo3;
+            var campo4 = 0;
+            $(this).children("td").each(function (index2) {
+                switch (index2) {
+                    case 0: campo1 = $(this).text();
+                        break;
+                    case 1: campo2 = $(this).text();
+                        break;
+                    case 2: campo3 = $(this).text();
+                        break;
+                    case 3: campo4 = $(this).find('.Monto').val();
+                        break;
+                }
+            });
+            LimpiarSpanMessage('field_' + idrow);
+            if (campo4 == 0) {
+                spanMessage('field_' + idrow, '* No incluye recarga');
+            }
+            else if (RegExPattern.test(campo4) == false) {
+                spanMessage('field_' + idrow, '* Monto invalido (' + campo4 + ')');
+                resultado = false;
+            }
+            else if (campo4 > 500) {
+                spanMessage('field_' + idrow, '* El monto excede el valor máximo permitido (500)');
+                resultado = false;
+            }
+            else {
+                TotalRecargas = TotalRecargas + 1;
+                MontoTotalRecargas = MontoTotalRecargas + parseInt(campo4);
+            }
+            document.getElementById('TotalRecargas').value = TotalRecargas;
+            document.getElementById('MontoTotalRecargas').value = MontoTotalRecargas;
+        });
+        return resultado;
+    }
+
+    function spanMessage(idelemento, mensaje) {
+        var span = document.getElementById(idelemento);
+        while (span.firstChild) {
+            span.removeChild(span.firstChild);
+        }
+        span.appendChild(document.createTextNode(mensaje));
+    }
+
+    function LimpiarSpanMessage(idelemento) {
+        var span = document.getElementById(idelemento);
+        while (span.firstChild) {
+            span.removeChild(span.firstChild);
+        }
+    }
+
+    function verificarforma() {
+        if (!ValidarMontos()) {
+            alert("Hay campos invalidos, verifique.");
+        }
+        return ValidarMontos();
+    }
+</script>
+
 
