Commit - Recarga Masiva - Carga de Documento

--- a/Suma2Lealtad/Views/CompanyPrepago/FilterCompany.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/FilterCompany.cshtml
@@ -27,7 +27,7 @@
                     <form action="@Url.Action("FindCompany", "CompanyPrepago")" name="FilterForm" id="FilterForm" method="post" onsubmit="return validateForm();">
 
                         <div class="editor-label col-md-4 control-label">
-                            Nombre Compañia:
+                            Compañia:
                         </div>
 
                         <div class="editor-field col-md-8">
