--- a/Suma2Lealtad/Views/CompanyPrepago/Recargas.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Recargas.cshtml
@@ -27,14 +27,10 @@
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            @*<h3 class="panel-title">Afiliado  @Model.DocId / Saldos <a href="@Url.Action("Index", "Afiliado", new { numdoc = Model.DocId })" class="btn btn-success btn-md">Regresar</a></h3>*@
-            <h3 class="panel-title">Prepago / Compañia / Beneficiarios / Recarga Individual</h3>
-            @*<input type="submit" class="btn btn-success btn-md" value="Regresar" style="padding-right: 15px; padding-left: 15px; margin-left: 0px;" />*@
+            <h3 class="panel-title">Prepago / Compañia / Beneficiarios / @Html.DisplayFor(model => Model.FirstOrDefault().TipoRecarga)</h3>
         </div>
 
         <div class="panel-body">
-
-            @*@Html.HiddenFor(model => model.)*@
 
             <div class="editor-label col-md-4 control-label">
                 Compañia :
@@ -67,10 +63,6 @@
 
             <div class="col-md-12 col-tabla-btn">
                 <div class="pull-right">
-                    @*<a href="@Url.Action("", "")" class="btn btn-success btn-md">Órdenes de Recarga</a>
-                        <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Individual</a>
-                        <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Masiva</a>
-                        <a href="@Url.Action("Filter", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Agregar Nuevo Beneficiario</a>*@
                     <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.FirstOrDefault().companyid })" class="btn btn-success btn-md">Filtrar Beneficiarios</a>
                     <a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-danger btn-md">Cancelar</a>
                 </div>
@@ -82,7 +74,6 @@
 
             <form id="commentForm" method="post" action="@Url.Action("Recargas", "CompanyPrepago")" class="form-horizontal" onsubmit="return verificarforma();">
 
-                @*<table class="table table-striped custab">*@
                 <table id="beneficiarios" class="table table-hover">
 
                     <thead>
@@ -90,18 +81,12 @@
                             <th>Tipo</th>
                             <th>Número de Documento</th>
                             <th>Nombre</th>
-                            @*<th>Correo</th>
-                        <th>Estatus de Afiliación</th>
-                        <th>Número de Tarjeta</th>
-                        <th>Estatus de Tarjeta</th>*@
                             <th>Monto</th>
                         </tr>
                     </thead>
 
                     <tbody>
 
-                        @*@foreach (var item in Model)
-                        {    *@
                         @for (int i = 0; i < Model.Count; i++)
                         {     
                             <tr data-row-key="@Model[i].Afiliadoid">
@@ -121,34 +106,7 @@
                                     @Html.DisplayFor(modelItem => Model[i].name) @Html.DisplayFor(modelItem => Model[i].lastname1)
                                 </td>
 
-                                @*<td>
-                                @Html.DisplayFor(modelItem => item.email)
-                            </td>
-
-                            <td>
-                                @Html.DisplayFor(modelItem => item.estatus)
-                            </td>
-
-                            <td>
-                                @Html.DisplayFor(modelItem => item.pan)
-                            </td>
-
-                            <td>
-                                @Html.DisplayFor(modelItem => item.estatustarjeta)
-                            </td>*@
-
                                 <td class="text-right">
-                                    @* @{if (item.estatus == "Nueva")
-                                  {
-                                    <a id="@(item.id)_approve" href="@Url.Action("AprobarBeneficiario", "CompanyPrepago", new { id = item.id })" class="btn btn-success btn-xs" >
-                                        <span class="glyphicon glyphicon-ok"></span>
-                                    </a>
-                                  }
-                                }
-                                <a id="@(item.id)_edit" href="@Url.Action("EditBeneficiario", "CompanyPrepago", new { id = item.id })" class="btn btn-info btn-xs" >
-                                    <span class="glyphicon glyphicon-edit"></span>
-                                </a>*@
-                                    @*<input type="text" id="Monto_@item.Afiliadoid" name="Monto" value="" maxlength="10" placeholder="Indique el monto" class="form-control Monto">*@
                                     @Html.TextBoxFor(modelItem => Model[i].MontoRecarga, new { @class = "form-control Monto" })
                                     <span id="field_@Model[i].Afiliadoid"></span>
                                 </td>
@@ -163,7 +121,6 @@
                 </div>
 
                 <div class="editor-field col-md-4">
-                    @*@Html.TextBox("TotalRecargas", "", new { @class = "form-control", @readonly = "true" })*@
                     <input type="text" id="TotalRecargas" name="TotalRecargas" value="" maxlength="10" class="form-control" readonly="true">
                 </div>
 
@@ -172,7 +129,6 @@
                 </div>
 
                 <div class="editor-field col-md-4">
-                    @*@Html.TextBox("MontoTotalRecargas", "", new { @class = "form-control", @readonly = "true"})*@
                     <input type="text" id="MontoTotalRecargas" name="MontoTotalRecargas" value="" maxlength="10" class="form-control" readonly="true">
                 </div>
 
