Filtros de Beneficiarios para recargas

--- a/Suma2Lealtad/Views/CompanyPrepago/Index.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Index.cshtml
@@ -101,6 +101,7 @@
                         </div>
                         <div class="pull-right">
                             <a href="@Url.Action("Create", "CompanyPrepago")" class="btn btn-success btn-md">Agregar Nueva Compañia</a>
+                            <a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-danger btn-md">Regresar</a>
                         </div>
                     </div>
                     <!--// buttons -->
