--- a/Suma2Lealtad/Views/CompanyPrepago/Ordenes.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Ordenes.cshtml
@@ -64,16 +64,18 @@
                     <br />
                 </div>
 
-                @*<div class="col-md-12 col-tabla-btn">
+                <div class="col-md-12 col-tabla-btn">
                     <div class="pull-right">
+                        @*
                         <a href="@Url.Action("", "")" class="btn btn-success btn-md">Órdenes de Recarga</a>
                         <a href="@Url.Action("Recargas", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Recarga Individual</a>
                         <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Masiva</a>
                         <a href="@Url.Action("Filter", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Agregar Nuevo Beneficiario</a>
                         <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Filtrar Beneficiarios</a>
-                        <a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-danger btn-md">Cancelar</a>
+                        *@
+                        <a href="@Url.Action("Index", "CompanyPrepago", new { rif = Model.rif })" class="btn btn-danger btn-md">Regresar</a>
                     </div>
-                </div>*@
+                </div>
 
             </div>
 
